--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.1",
@@ -19,6 +20,7 @@
     "react-native": "0.72.6",
     "react-native-date-picker": "^4.3.3",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
