--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@testing-library/react-native": "^12.4.0",
     "axios": "^1.6.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
