--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@testing-library/react-native": "^12.4.0",
     "axios": "^1.6.1",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-date-picker": "^4.3.3",
