--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@testing-library/react-native": "^12.4.0",
     "axios": "^1.6.1",
     "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-circular-progress": "^1.3.9",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-date-picker": "^4.3.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.0.0",
     "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
