--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-snackbar": "^2.6.2",
     "react-native-svg": "^14.0.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-webview": "^13.6.3"
+    "react-native-webview": "^13.6.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
