--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-date-picker": "^4.3.3",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-google-mobile-ads": "^12.4.0",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^3.6.1",
     "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-snackbar": "^2.6.2",
-    "react-native-svg": "^14.0.0",
+    "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-webview": "^13.6.3",
     "yup": "^1.3.2"
