--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.3.0",
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.5.1",
