--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-date-picker": "^4.3.3",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-google-mobile-ads": "^12.4.0",
+    "react-native-paper": "^5.12.1",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^3.6.1",
     "react-native-safari-view": "^2.1.0",
