adding progress bars by categories in dashboard, some ideas for stats

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-date-picker": "^4.3.3",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-gifted-charts": "^1.4.10",
     "react-native-google-mobile-ads": "^12.4.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-selector": "^2.1.2",
     "react-native-paper": "^5.12.1",
     "react-native-picker": "^4.3.7",
