--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-native-community/masked-view": "^0.1.11",
@@ -37,7 +42,7 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-snackbar": "^2.6.2",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "^14.2.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-webview": "^13.6.3",
     "yup": "^1.3.2"
